--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: BML Avas Transfer
 
 publish_to: 'none'
 
-version: 1.0.2+2
+version: 1.0.3+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -19,6 +19,7 @@ dependencies:
   permission_handler: ^5.0.1+1
   path_provider: ^1.6.24
   share_extend: ^1.1.9
+  flutter_barcode_scanner: ^1.0.2
 
 dev_dependencies:
   flutter_test:
