--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: BML Avas Transfer
 
 publish_to: 'none'
 
-version: 1.0.3+3
+version: 1.0.4+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -12,20 +12,20 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.1
-  http: ^0.12.1
-  intl: ^0.16.1
-  shared_preferences: ^0.5.10
+  http: ^0.13.1
+  intl: ^0.17.0
   sms: ^0.2.4
-  permission_handler: ^5.1.0+2
-  path_provider: ^1.6.24
+  permission_handler: ^6.1.1
+  path_provider: ^2.0.1
   share_extend: ^1.1.9
   flutter_barcode_scanner: ^1.0.2
-  flutter_mobile_vision: ^0.1.4+1
+  get_storage: ^2.0.1
+#  flutter_mobile_vision: ^0.1.4+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
+  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: true
